// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button changes color when hovered 1`] = `
<DocumentFragment>
  <button
    class="medium button normal basic"
  >
    <div>
      <svg
        fill="none"
        height="5"
        viewBox="0 0 8 5"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
          fill="#000"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button changes color when hovered 2`] = `
<DocumentFragment>
  <button
    class="medium button hover basic"
  >
    <div>
      <svg
        fill="none"
        height="5"
        viewBox="0 0 8 5"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
          fill="#000"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button changes color when hovered 3`] = `
<DocumentFragment>
  <button
    class="medium button normal basic"
  >
    <div>
      <svg
        fill="none"
        height="5"
        viewBox="0 0 8 5"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
          fill="#000"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;
